--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@tiptap/extension-bold": "^2.0.0-beta.26",
     "@tiptap/extension-bullet-list": "^2.0.0-beta.26",
     "@tiptap/extension-document": "^2.0.0-beta.15",
+    "@tiptap/extension-dropcursor": "^2.0.0-beta.25",
     "@tiptap/extension-floating-menu": "^2.0.0-beta.50",
+    "@tiptap/extension-gapcursor": "^2.0.0-beta.34",
     "@tiptap/extension-hard-break": "^2.0.0-beta.30",
     "@tiptap/extension-heading": "^2.0.0-beta.26",
+    "@tiptap/extension-history": "^2.0.0-beta.21",
     "@tiptap/extension-horizontal-rule": "^2.0.0-beta.31",
     "@tiptap/extension-image": "^2.0.0-beta.27",
     "@tiptap/extension-italic": "^2.0.0-beta.26",
