--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/extension-list-item": "^2.0.0-beta.20",
     "@tiptap/extension-ordered-list": "^2.0.0-beta.27",
     "@tiptap/extension-paragraph": "^2.0.0-beta.23",
+    "@tiptap/extension-strike": "^2.0.0-beta.27",
     "@tiptap/extension-subscript": "^2.0.0-beta.10",
     "@tiptap/extension-superscript": "^2.0.0-beta.10",
     "@tiptap/extension-table": "^2.0.0-beta.48",
@@ -42,6 +43,7 @@
     "@tiptap/extension-table-header": "^2.0.0-beta.22",
     "@tiptap/extension-table-row": "^2.0.0-beta.19",
     "@tiptap/extension-text": "^2.0.0-beta.15",
+    "@tiptap/extension-underline": "^2.0.0-beta.23",
     "@tiptap/starter-kit": "^2.0.0-beta.183",
     "alpinejs": "^3.9.6",
     "highlight.js": "^11.5.0",
