actions are weird

--- a/.github/workflows/build-assets.yml
+++ b/.github/workflows/build-assets.yml
@@ -13,13 +13,12 @@ jobs:
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v3
-      - name: NPM Build
-      - name: Build
+        name: NPM Build
         run: |
           npm install
           npm run production
-      - name: Put built assets in Artifacts
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v3
+        name: Put built assets in Artifacts
         with:
           name: dist
           path: resources/dist/
