--- a/.github/workflows/build-assets.yml
+++ b/.github/workflows/build-assets.yml
@@ -18,7 +18,7 @@ jobs:
           npm run production
       - uses: actions/upload-artifact@v3
         with:
-          path: dist
+          path: resources/dist/
       - uses: actions/download-artifact@v3
         with:
-          path: dist
+          path: resources/dist/
