--- a/.github/workflows/build-assets.yml
+++ b/.github/workflows/build-assets.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node.js
         uses: actions/setup-node@v3
-        width:
+        with:
           node-version: "14"
           check-latest: true
       - name: Install NPM Dependencies
