--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@tiptap/extension-blockquote": "^2.0.0-beta.26",
     "@tiptap/extension-bold": "^2.0.0-beta.26",
     "@tiptap/extension-bullet-list": "^2.0.0-beta.26",
+    "@tiptap/extension-code": "^2.0.0-beta.26",
+    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.68",
+    "@tiptap/extension-color": "^2.0.0-beta.9",
     "@tiptap/extension-document": "^2.0.0-beta.15",
     "@tiptap/extension-dropcursor": "^2.0.0-beta.25",
     "@tiptap/extension-floating-menu": "^2.0.0-beta.50",
@@ -43,12 +46,14 @@
     "@tiptap/extension-table-header": "^2.0.0-beta.22",
     "@tiptap/extension-table-row": "^2.0.0-beta.19",
     "@tiptap/extension-text": "^2.0.0-beta.15",
+    "@tiptap/extension-text-style": "^2.0.0-beta.23",
     "@tiptap/extension-underline": "^2.0.0-beta.23",
     "@tiptap/starter-kit": "^2.0.0-beta.183",
     "alpinejs": "^3.9.6",
     "highlight.js": "^11.5.0",
     "install": "^0.13.0",
     "laravel-mix": "^6.0.43",
+    "lowlight": "^2.6.1",
     "npm": "^8.6.0",
     "tailwindcss": "^3.0.23",
     "tiptap-extensions": "^1.35.2"
