fix remove color bug, add width and height to images, add source functionality

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require": {
         "php": "^8.0.2",
         "filament/filament": "^2.0",
-        "spatie/laravel-package-tools": "^1.9.2"
+        "spatie/laravel-package-tools": "^1.9.2",
+        "intervention/image": "^2.7"
     },
     "autoload": {
         "psr-4": {
