--- a/package.json
+++ b/package.json
@@ -58,5 +58,10 @@
     "npm": "^8.6.0",
     "tailwindcss": "^3.0.23",
     "tiptap-extensions": "^1.35.2"
+  },
+  "dependencies": {
+    "@tiptap-pro/extension-details": "^2.0.0-beta.5",
+    "@tiptap-pro/extension-details-content": "^2.0.0-beta.5",
+    "@tiptap-pro/extension-details-summary": "^2.0.0-beta.2"
   }
 }
