--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@tiptap/extension-horizontal-rule": "^2.0.0-beta.31",
     "@tiptap/extension-image": "^2.0.0-beta.27",
     "@tiptap/extension-italic": "^2.0.0-beta.26",
-    "@tiptap/extension-link": "^2.0.0-beta.36",
+    "@tiptap/extension-link": "2.0.0-beta.36",
     "@tiptap/extension-list-item": "^2.0.0-beta.20",
     "@tiptap/extension-ordered-list": "^2.0.0-beta.27",
     "@tiptap/extension-paragraph": "^2.0.0-beta.23",
