--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "license": "MIT",
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.0",
+    "@tiptap-pro/extension-details": "^2.0.0-beta.5",
+    "@tiptap-pro/extension-details-content": "^2.0.0-beta.5",
+    "@tiptap-pro/extension-details-summary": "^2.0.0-beta.2",
     "@tiptap/core": "^2.0.0-beta.174",
     "@tiptap/extension-blockquote": "^2.0.0-beta.26",
     "@tiptap/extension-bold": "^2.0.0-beta.26",
