--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "@tiptap/extension-text-style": "^2.0.0-beta.23",
     "@tiptap/extension-underline": "^2.0.0-beta.23",
     "alpinejs": "^3.9.6",
+    "autoprefixer": "^10.4.7",
     "highlight.js": "^11.5.0",
     "laravel-mix": "^6.0.43",
     "lowlight": "^2.6.1",
+    "postcss-import": "^14.1.0",
     "tailwindcss": "^3.0.23"
   }
 }
