--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
         "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
+        "files": [
+            "src/helpers.php"
+        ],
         "psr-4": {
             "FilamentTiptapEditor\\": "src/"
         }
