--- a/package.json
+++ b/package.json
@@ -13,38 +13,41 @@
   "license": "MIT",
   "devDependencies": {
     "@awcodes/filament-plugin-purge": "^1.0.1",
-    "@tiptap/core": "^2.0.0-beta.174",
-    "@tiptap/extension-blockquote": "^2.0.0-beta.26",
-    "@tiptap/extension-bold": "^2.0.0-beta.26",
-    "@tiptap/extension-bullet-list": "^2.0.0-beta.26",
-    "@tiptap/extension-code": "^2.0.0-beta.26",
-    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.68",
-    "@tiptap/extension-color": "^2.0.0-beta.9",
-    "@tiptap/extension-document": "^2.0.0-beta.15",
-    "@tiptap/extension-dropcursor": "^2.0.0-beta.25",
-    "@tiptap/extension-floating-menu": "^2.0.0-beta.50",
-    "@tiptap/extension-gapcursor": "^2.0.0-beta.34",
-    "@tiptap/extension-hard-break": "^2.0.0-beta.30",
-    "@tiptap/extension-heading": "^2.0.0-beta.26",
-    "@tiptap/extension-history": "^2.0.0-beta.21",
-    "@tiptap/extension-horizontal-rule": "^2.0.0-beta.31",
-    "@tiptap/extension-image": "^2.0.0-beta.27",
-    "@tiptap/extension-italic": "^2.0.0-beta.26",
-    "@tiptap/extension-link": "^2.0.0-beta.36",
-    "@tiptap/extension-list-item": "^2.0.0-beta.20",
-    "@tiptap/extension-ordered-list": "^2.0.0-beta.27",
-    "@tiptap/extension-paragraph": "^2.0.0-beta.23",
-    "@tiptap/extension-strike": "^2.0.0-beta.27",
-    "@tiptap/extension-subscript": "^2.0.0-beta.10",
-    "@tiptap/extension-superscript": "^2.0.0-beta.10",
-    "@tiptap/extension-table": "^2.0.0-beta.48",
-    "@tiptap/extension-table-cell": "^2.0.0-beta.20",
-    "@tiptap/extension-table-header": "^2.0.0-beta.22",
-    "@tiptap/extension-table-row": "^2.0.0-beta.19",
-    "@tiptap/extension-text": "^2.0.0-beta.15",
-    "@tiptap/extension-text-align": "^2.0.0-beta.29",
-    "@tiptap/extension-text-style": "^2.0.0-beta.23",
-    "@tiptap/extension-underline": "^2.0.0-beta.23",
+    "@tiptap/core": "^2.0.0",
+    "@tiptap/extension-blockquote": "^2.0.0",
+    "@tiptap/extension-bold": "^2.0.0",
+    "@tiptap/extension-bubble-menu": "^2.0.3",
+    "@tiptap/extension-bullet-list": "^2.0.0",
+    "@tiptap/extension-code": "^2.0.0",
+    "@tiptap/extension-code-block-lowlight": "^2.0.0",
+    "@tiptap/extension-color": "^2.0.0",
+    "@tiptap/extension-document": "^2.0.0",
+    "@tiptap/extension-dropcursor": "^2.0.0",
+    "@tiptap/extension-floating-menu": "^2.0.0",
+    "@tiptap/extension-gapcursor": "^2.0.0",
+    "@tiptap/extension-hard-break": "^2.0.0",
+    "@tiptap/extension-heading": "^2.0.0",
+    "@tiptap/extension-highlight": "^2.0.0",
+    "@tiptap/extension-history": "^2.0.0",
+    "@tiptap/extension-horizontal-rule": "^2.0.0",
+    "@tiptap/extension-image": "^2.0.0",
+    "@tiptap/extension-italic": "^2.0.0",
+    "@tiptap/extension-link": "^2.0.0",
+    "@tiptap/extension-list-item": "^2.0.0",
+    "@tiptap/extension-ordered-list": "^2.0.0",
+    "@tiptap/extension-paragraph": "^2.0.0",
+    "@tiptap/extension-strike": "^2.0.0",
+    "@tiptap/extension-subscript": "^2.0.0",
+    "@tiptap/extension-superscript": "^2.0.0",
+    "@tiptap/extension-table": "^2.0.0",
+    "@tiptap/extension-table-cell": "^2.0.0",
+    "@tiptap/extension-table-header": "^2.0.0",
+    "@tiptap/extension-table-row": "^2.0.0",
+    "@tiptap/extension-text": "^2.0.0",
+    "@tiptap/extension-text-align": "^2.0.0",
+    "@tiptap/extension-text-style": "^2.0.0",
+    "@tiptap/extension-underline": "^2.0.0",
+    "@tiptap/pm": "^2.0.3",
     "alpinejs": "^3.9.6",
     "autoprefixer": "^10.4.7",
     "esbuild": "^0.14.49",
@@ -53,8 +56,5 @@
     "npm-run-all": "^4.1.5",
     "postcss-import": "^14.1.0",
     "tailwindcss": "^3.0.23"
-  },
-  "dependencies": {
-    "@tiptap/extension-highlight": "^2.0.0-beta.199"
   }
 }
