--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-/node_modules
-/vendor
-/.npmrc
-/.idea
-/composer.lock
+.DS_Store
+.idea
+.phpunit.result.cache
+.vscode
+build
+composer.lock
+coverage
+docs
+node_modules
+phpunit.xml
+phpstan.neon
+testbench.yaml
+vendor
