--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,27 @@
-/.github            export-ignore
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
-/images             export-ignore
-resources/dist/* -diff
+# Path-based git attributes
+# https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
+
+# Ignore all test and documentation with "export-ignore".
+/.editorconfig          export-ignore
+/.github                export-ignore
+/.gitattributes         export-ignore
+/.gitignore             export-ignore
+/.idea                  export-ignore
+/.package-lock.json     export-ignore
+/.php_cs.dist.php       export-ignore
+/.prettierrc            export-ignore
+/.vscode                export-ignore
+/art                    export-ignore
+/docs                   export-ignore
+/images                 export-ignore
+/package.json           export-ignore
+/phpstan-baseline.neon  export-ignore
+/phpstan.neon.dist      export-ignore
+/phpunit.xml.dist       export-ignore
+/postcss.config.cjs      export-ignore
+/psalm.xml              export-ignore
+/psalm.xml.dist         export-ignore
+/tailwind.config.js     export-ignore
+/testbench.yaml         export-ignore
+/tests                  export-ignore
+/UPGRADING.md           export-ignore
