--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
     "dev:styles": "npx tailwindcss -i resources/css/plugin.css -o resources/dist/filament-tiptap-editor.css --postcss --watch",
     "dev:scripts": "node bin/build.js --dev",
@@ -55,12 +56,14 @@
     "autoprefixer": "^10.4.7",
     "esbuild": "^0.17.0",
     "highlight.js": "^11.5.0",
+    "lowlight": "^2.9.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "postcss-import": "^15.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-blade": "^1.5.3",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "vanilla-colorful": "^0.7.2"
   }
 }
