--- a/.github/workflows/build-assets.yml
+++ b/.github/workflows/build-assets.yml
@@ -1,16 +1,21 @@
-name: Build Assets
+name: "Build Assets"
 
 on:
   pull_request:
-    branches: [3.x]
-    types: [closed]
+    branches:
+      - 3.x
+    types:
+      - closed
 
 jobs:
-  npm-build:
+  if_merged:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -24,7 +29,4 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          branch: 3.x
-          commit_message: >
-            Chore: build assets
-
+          commit_message: "Chore: build assets"
