Add placeholder support

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tiptap/extension-list-item": "^2.0.0",
     "@tiptap/extension-ordered-list": "^2.0.0",
     "@tiptap/extension-paragraph": "^2.0.0",
+    "@tiptap/extension-placeholder": "^2.1.12",
     "@tiptap/extension-strike": "^2.0.0",
     "@tiptap/extension-subscript": "^2.0.0",
     "@tiptap/extension-superscript": "^2.0.0",
