--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "autoprefixer": "^10.4.7",
     "esbuild": "^0.19.4",
     "highlight.js": "^11.5.0",
+    "lodash": "^4.17.21",
     "lowlight": "^2.9.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
