fix invalid yml

--- a/.github/workflows/build-assets.yml
+++ b/.github/workflows/build-assets.yml
@@ -7,9 +7,9 @@ on:
     types:
       - closed
     paths:
-      - 'resources/js/**.js',
-      - 'resources/css/**.css',
-      - 'resources/views/**.blade.php',
+      - 'resources/js/**.js'
+      - 'resources/css/**.css'
+      - 'resources/views/**.blade.php'
 
 jobs:
   if_merged:
