add mentions extension

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,28 +1,28 @@
-name: "Fix PHP code styling"
+name: 'Fix PHP code styling'
 
 on:
-  pull_request:
-    branches:
-      - 3.x
-    types:
-      - closed
-    paths:
-      - '**.php'
+    pull_request:
+        branches:
+            - 3.x
+        types:
+            - closed
+        paths:
+            - '**.php'
 
 jobs:
-  if_merged:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}
+    if_merged:
+        if: github.event.pull_request.merged == true
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+              with:
+                  ref: ${{ github.head_ref }}
 
-      - name: Fix PHP code style issues
-        uses: aglipanci/laravel-pint-action@2.3.1
+            - name: Fix PHP code style issues
+              uses: aglipanci/laravel-pint-action@2.3.1
 
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "Chore: Fix PHP code styling"
+            - name: Commit changes
+              uses: stefanzweifel/git-auto-commit-action@v5
+              with:
+                  commit_message: 'Chore: Fix PHP code styling'
