--- a/.prettierrc
+++ b/.prettierrc
@@ -1,19 +1,16 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "tailwindConfig": "./tailwind.config.js",
-  "trailingComma": "all",
-  "plugins": [
-    "./node_modules/prettier-plugin-blade/"
-  ],
-  "overrides": [
-    {
-      "files": [
-        "*.blade.php"
-      ],
-      "options": {
-        "parser": "blade"
-      }
-    }
-  ]
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "tailwindConfig": "./tailwind.config.js",
+    "plugins": ["./node_modules/prettier-plugin-blade/"],
+    "overrides": [
+        {
+            "files": ["*.blade.php"],
+            "options": {
+                "parser": "blade"
+            }
+        }
+    ]
 }
